[gd_scene load_steps=3 format=3 uid="uid://b4ojot8ql0tyk"]

[ext_resource type="Script" uid="uid://d1q73gajwclmr" path="res://scenes/game_select_menu.gd" id="1_nokh3"]
[ext_resource type="FontFile" uid="uid://bsjh5xe0fjrgq" path="res://assets/fonts/Tiny5-Regular.ttf" id="2_n0rje"]

[node name="GameSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nokh3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -368.0
offset_right = 368.0
offset_bottom = 343.0
grow_horizontal = 2
theme_override_constants/margin_top = 52

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_n0rje")
theme_override_font_sizes/font_size = 128
text = "Choose Game
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -48.0
offset_right = 139.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="bug_game_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n0rje")
theme_override_font_sizes/font_size = 64
text = "Bug"

[node name="bulb_game_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n0rje")
theme_override_font_sizes/font_size = 64
text = "Bulb"

[node name="back_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -84.0
offset_right = 46.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_n0rje")
theme_override_font_sizes/font_size = 32
text = "BACK"

[connection signal="pressed" from="HBoxContainer/bug_game_button" to="." method="_on_bug_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/bulb_game_button" to="." method="_on_bulb_game_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
